Fixed list formatting on mobile

--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -33,3 +33,7 @@ img,svg {
 .floatright {
 	float: none;
 }
+
+.about ul {
+	columns: 1 auto;
+}
